Cleanup FeatureRegistry
- Reduce code duplication in asSupplier() implementations
- Remove support for SmartDashboard
- Remove 'enabled' field and enabled() method from Feature